Bug 254187 - [Cocoa] Fix typo in TextShaping logging
Summary: [Cocoa] Fix typo in TextShaping logging
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Text (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Myles C. Maxfield
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-20 15:12 PDT by Myles C. Maxfield
Modified: 2023-03-30 16:53 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myles C. Maxfield 2023-03-20 15:12:49 PDT
[Cocoa] Fix typo in TextShaping logging
Comment 1 Radar WebKit Bug Importer 2023-03-20 15:13:03 PDT
<rdar://problem/106964746>
Comment 2 Myles C. Maxfield 2023-03-20 15:14:29 PDT
Pull request: https://github.com/WebKit/WebKit/pull/11736
Comment 3 EWS 2023-03-30 16:53:32 PDT
Committed 262376@main (c22057e06833): <https://commits.webkit.org/262376@main>

Reviewed commits have been landed. Closing PR #11736 and removing active labels.