[Cocoa] Fix typo in TextShaping logging https://bugs.webkit.org/show_bug.cgi?id=254187 rdar://106964746

Reviewed by Simon Fraser.

Just a simple typo in TextShaping logging code.

No test because there is no behavior change.

* Source/WebCore/platform/graphics/mac/ComplexTextControllerCoreText.mm:
(WebCore::ComplexTextController::ComplexTextRun::ComplexTextRun):

Canonical link: https://commits.webkit.org/262376@main